Blindly add --add-opens=javafx.graphics/javafx.scene=org.jabref.merged.module